Minor fixes row-gap

--- a/css/services.css
+++ b/css/services.css
@@ -12,7 +12,7 @@
     .services-body {
         display: flex;
         flex-direction: column;
-        row-gap: 5vh;
+        row-gap: 8vh;
         align-items: center;
     }
    .contact-s {
